--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "regenerator-runtime": "^0.13.7",
+    "supertokens-auth-react": "^0.2.0",
+    "supertokens-node": "^3.1.0"
   }
 }
